--- a/KsiazkaTele/KsiazkaTele.csproj
+++ b/KsiazkaTele/KsiazkaTele.csproj
@@ -82,7 +82,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="KTkomponent.cs" />
+    <Compile Include="KTkomponent.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
